# odman

./: .env.sample  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
odman/: __init__.py  auth.py  cli.py  client.py  download.py  progress.py  upload.py
odman/cli/: main.py
odman/core/: auth.py  client.py  config.py  stats.py
odman/models/: file.py
odman/services/: download.py  upload.py
odman/utils/: helpers.py  progress.py
onedriveuploader/: main.py
scripts/: README.md  release.sh
