[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onedriveuploader"
version = "0.1.0"
description = "A CLI tool to upload files to a user's OneDrive via app-only auth."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "msal>=1.32.3",
    "requests>=2.32.4",
    "rich>=14.0.0",
]


[project.scripts]
onedriveuploader = "onedriveuploader.main:main"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
